[package]
name = "pong"
version = "0.1.0"
edition = "2021"

[dependencies]
# NOTE: Remember to revert this before releasing your game
bevy = { version = "0.13.0", features = ["dynamic_linking"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3